# WinAutoRuns

./: gui.py  main.py  paths.json  pyproject.toml  reg_runs.py
