[tool.poetry]
name = "winautoruns"
version = "0.1.0"
description = ""
authors = ["Robert <54269637+R-udren@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
